force-app/main/default/objects/OnboardingTask__c/OnboardingTask__c.object-meta.xml
<CustomObject>
    <label>OnboardingTask</label>
    <nameField>
        <label>OnbboardingTask Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OnboardingTasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>