force-app/main/default/objects/OnboardingTask__c/fields/CompletedDate__c.field-meta.xml
<CustomField>
    <fullName>CompletedDate__c</fullName>
    <label>CompletedDate</label>
    <type>Date</type>
</CustomField>